- Add functions to set/get cursor character and blinktime to IGUIEditBox
- Collada exporter calculates values for orthographic camera now on export
- Collada exporter now exports the camera up-vector correctly.
- Add IColladaMeshWriter::findGeometryNameForNode
- Add getters IGUIButton::isDrawBorderEnabled and IGUIButton::isDrawBackgroundEnabled

--------------------------
Changes in 1.8.2

 - Example 22 no longer select a random texture after loading a new texture (thanks at mongoose7 for reporting).
 - Fix bug in IGUISkin serialization which messed up serialization of the button-pressed offsets (thanks at Midnight for reporting).
 - IGUIStaticText::getTextHeight returns now the correct height for texts with newlines even WordWrap is not set.
 - Crashfix for CGUIEditBox. CGUIEditBox::setMultiLine must break text when changed or other functions like getTextDimension can crash afterward for strings with newline characters.
 - CGUIEditBox and the GUI-Editor now convert pasted text correctly using mbstowcs.
 - C::B project files work again on newer Linux-distributions which have cleaned up their dev-lib dependencies.
 - Makefile for the new IrrFontTool links now correctly to libfontconfig

--------------------------
Changes in 1.8.1 (17.11.2013)

 - Improved OpenGL performance under OSX (Thanks devonsoft for reporting).
 - Fixed OSX compilation issues.
 - [KNOWN BUG] Software driver doesn't work properly under OSX 10.9.
 - For speed improvement the following attributes accessible by ISceneManager::getParameters() are no longer updated in release:
   "culled", "calls", "drawn_solid", "drawn_transparent", "drawn_transparent_effect".
   They can be enabled by compiling Irrlicht with the define _IRR_SCENEMANAGER_DEBUG.
   Thanks @hendu for reporting, see http://irrlicht.sourceforge.net/forum/viewtopic.php?f=2&t=48211 for the discussion.
 - Fix compile problem with CIrrDeviceSDL on VS2008 (and maybe other systems). Thanks @HellFlip for reporting.